--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -114,7 +114,7 @@ set preview_images true
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method ueberzug
+set preview_images_method w3m
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -370,8 +370,8 @@ map :  console
 map ;  console
 map !  console shell%space
 map @  console -p6 shell  %%s
-map #  console shell -p%space
-map s  console shell%space
+# map #  console shell -p%space
+map S  console shell%space
 map r  chain draw_possible_programs; console open_with%space
 map f  console find%space
 map cd console cd%space
@@ -389,7 +389,7 @@ map MH linemode sizehumanreadablemtime
 map Mt linemode metatitle
 
 # Tagging / Marking
-map t       tag_toggle
+map tt       tag_toggle
 map ut      tag_remove
 map "<any>  tag_toggle tag=%any
 map <Space> mark_files toggle=True
@@ -424,10 +424,10 @@ map <CR>       move right=1
 map <INSERT>   console touch%space
 
 # VIM-like
-copymap <UP>       k
-copymap <DOWN>     j
+copymap <UP>       n
+copymap <DOWN>     t
 copymap <LEFT>     h
-copymap <RIGHT>    l
+copymap <RIGHT>    s
 copymap <HOME>     gg
 copymap <END>      G
 copymap <PAGEDOWN> <C-F>
@@ -521,7 +521,7 @@ map yk  eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 
 # Searching
 map /  console search%space
-map n  search_next
+# map n  search_next
 map N  search_next forward=False
 map ct search_next order=tag
 map cs search_next order=size
@@ -706,10 +706,10 @@ pmap  <pageup>    pager_move  up=1.0    pages=True
 pmap  <C-d>       pager_move  down=0.5  pages=True
 pmap  <C-u>       pager_move  up=0.5    pages=True
 
-copypmap <UP>       k  <C-p>
-copypmap <DOWN>     j  <C-n> <CR>
+copypmap <UP>       n  <C-p>
+copypmap <DOWN>     t  <C-n> <CR>
 copypmap <LEFT>     h
-copypmap <RIGHT>    l
+copypmap <RIGHT>    s
 copypmap <HOME>     g
 copypmap <END>      G
 copypmap <C-d>      d
@@ -737,8 +737,8 @@ tmap <pageup>    taskview_move up=1.0    pages=True
 tmap <C-d>       taskview_move down=0.5  pages=True
 tmap <C-u>       taskview_move up=0.5    pages=True
 
-copytmap <UP>       k  <C-p>
-copytmap <DOWN>     j  <C-n> <CR>
+copytmap <UP>       n  <C-p>
+copytmap <DOWN>     t  <C-n> <CR>
 copytmap <HOME>     g
 copytmap <END>      G
 copytmap <C-u>      u
